# midi_processing

./: .gitignore  CMakeLists.txt  midi_container.cpp  midi_container.h  midi_processing.pro  midi_processing.vcxproj  midi_processing.vcxproj.filters  midi_processor.h  midi_processor_helpers.cpp  midi_processor_hmi.cpp  midi_processor_hmp.cpp  midi_processor_lds.cpp  midi_processor_mids.cpp  midi_processor_riff_midi.cpp  midi_processor_standard_midi.cpp  midi_processor_syx.cpp  midi_processor_xmi.cpp
